# snakecharmers-dashboard

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
backend/snekdash_backend/: app.py  newsfragments.py
frontend/: .pre-commit-config.yaml  pyproject.toml
frontend/snekdash_frontend/: app.py
src/backend/: backend_app.py
src/frontend/: frontend_app.py
