[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"

[project]
# General metadata about your package
name = "snekdash_backend"
version = "0.1.0"
description = "backend for the snek dashboard"
authors = [
    {name = "Paul Robinson", email = "pacrob@protonmail.com"}
]
urls = {source = "https://github.com/pacrob/snakecharmers-dashboard"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi >=0.108.0",
    "sqlalchemy >=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=2.15.0",
]
test = [
    "pytest>=7.4.0",
]

[tool.pydocstyle]
# D100: Missing docstring in public module
# D104: Missing docstring in public package
add-ignore = "D100,D104"

[tool.isort]
combine_as_imports = "True"
extra_standard_library = "pytest"
force_grid_wrap = 1
force_sort_within_sections = "True"
known_third_party = "pytest"
multi_line_output = 3
profile = "black"

# [tool.flit.scripts]
# app = "backend_app:main"
