[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"

[project]
# General metadata about your package
name = "snekdash_frontend"
version = "0.1.0"
description = "frontend for the snek dashboard"
authors = [
    {name = "Paul Robinson", email = "pacrob@protonmail.com"}
]
urls = {source = "https://github.com/pacrob/snakecharmers-dashboard"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "requests >=2.31.0",
    "streamlit >=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=2.15.0",
]
test = [
    "pytest>=7.4.0",
]

[tool.pydocstyle]
# D100: Missing docstring in public module
# D104: Missing docstring in public package
add-ignore = "D100,D104"

# [tool.flit.scripts]
# app = "frontend:main"
